welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:6: error: '(' expected but identifier found.
    if nums(k)>m{
       ^indexOfMaxValue:14: error: illegal start of simple expression
  }
  ^